trashcat(fix): set touch action, fix scrolling, fix overflow

--- a/packages/trashcat/src/app.pcss
+++ b/packages/trashcat/src/app.pcss
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+#app {
+  touch-action: pan-x pan-y;
+}
+
 progress {
   box-sizing: border-box;
   border-width: unset;
